Update Contact-Us Button
Updated the contact-us button links.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="container hero-jumbotron">
         <h1 class="hero-title">CyberSecurity, Technology and Help Desk Simplified</h1>
         <p class="hero-description mb-3">We protect Southern California's small and medium size businesses with stress and jargon free security you can trust. No technical gibberish, just clear solutions that keep your business safe from digital threats.</p>
-        <a href="/contact#ContactSection" class="no-underline mt-3">
+        <a href="/contact-us" class="no-underline mt-3">
             <button class="button py-3 px-5 my-3">Schedule Your Security Review</button>
         </a>
     </div>
