--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -78,13 +78,13 @@
                             <a class="nav-link" href="/contact-us">Contact Us</a>
                         </li>
                         <li class="nav-item d-xl-none">
-                            <a href="/contact#ContactSection">
+                            <a href="/contact-us">
                                 <button class="button w-100 py-3 my-5" style="max-width: 500px;">Schedule a Call</button>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <a href="/contact#ContactSection" class="d-none d-xl-block">
+                <a href="/contact-us" class="d-none d-xl-block">
                     <button class="button fs-6 px-3 py-2">Schedule a Call</button>
                 </a>
             </div>
