--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
                         <li><a href="/index" class="">Home</a></li>
                         <li><a href="/services-overview" class="">Services</a></li>
                         <li><a href="/about-us" class="">About Us</a></li>
-                        <li><a href="/contact-us" class="">Contact</a></li>
+                        <li><a href="/contact-us" class="">Contact Us</a></li>
                         <li><a href="/faq" class="">FAQ</a></li>
                         <li><a href="/glossary" class="">Glossary</a></li>
                         <li><a href="/privacy-policy" class="">Privacy Policy</a></li>
